--- a/pc_index.html
+++ b/pc_index.html
@@ -172,11 +172,11 @@
         <p>React — JavaScript-библиотека с открытым исходным кодом для разработки пользовательских интерфейсов. React разрабатывается и поддерживается Facebook, Instagram и сообществом отдельных разработчиков и корпораций. React может использоваться для разработки одностраничных и мобильных приложений.</p>
       </div>
 
-      <div style="box-shadow: none">
-        <div class="innerh1">
-          <h1 class="Contenth1 text-center">&nbsp</h1>
-          <hr />
-          <h1 class="Contenth1 text-center endpage" style="text-shadow: 0px 0px 10px black; margin-left: -5vw; margin-right: -5vw; padding-top: 1rem; padding-bottom: 1rem">Ещё контакты</h1>
+      <div class="innerh1">
+        <h1 class="Contenth1 text-center">&nbsp</h1>
+        <hr />
+        <h1 class="Contenth1 text-center endpage" style="text-shadow: 0px 0px 10px black; margin-left: -5vw; margin-right: -5vw; padding-top: 1rem; padding-bottom: 1rem">Ещё контакты</h1>
+        <div style="box-shadow: none; background-image: url(./src/index/cookie.webp); background-size: 10%; padding-bottom: 4rem">
           <hr style="margin-bottom: 5rem" />
           <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -232,297 +232,337 @@
           </div>
         </div>
       </div>
-      <footer class="text-center text-white">
-        <!-- Grid container -->
-        <div class="p-4 pb-0">
-          <!-- Section: Form -->
-          <section class=""></section>
-          <!-- Section: Form -->
+
+      <div class="innerh1">
+        <hr />
+        <h1 class="Contenth1 text-center dynamic" style="text-shadow: 0px 0px 10px black; margin-left: -5vw; margin-right: -5vw; padding-top: 1rem; padding-bottom: 1rem">Сайт ещё в разработке</h1>
+        <hr />
+      </div>
+      <div class="container progress-bar-animated" style="box-shadow: 0 20px 15px #1d1d1d"></div>
+      <div class="main dsc-end-main" style="margin-bottom: -2rem; padding-top: 3rem">
+        <div class="row">
+          <div class="col" align="center">
+            <div class="dsc-end rounded">
+              <h3 class="h3 text-center">
+                Остались вопросы?<br />
+                Напиши на почту :D
+              </h3>
+              <a href="mailto:kotikovdev@gmail.com"><img id="myImg" src="./src/index/Static.webp" class="Mail" loading="lazy" alt="почта" /></a>
+            </div>
+          </div>
         </div>
-        <!-- Grid container -->
+        <footer class="text-center text-white">
+          <!-- Grid container -->
+          <div class="p-4 pb-0">
+            <!-- Section: Form -->
+            <section class=""></section>
+            <!-- Section: Form -->
+          </div>
+          <!-- Grid container -->
 
-        <!-- Copyright -->
-        <div class="text-center p-3" style="background-color: rgba(22, 22, 22, 0.8); border-radius: 2rem 2rem 0 0">
-          © 2022 Copyright:
-          <a class="text-white" href="#">Arsenij Kotikov</a>
-          |
-          <a class="text-white" href="https://github.com/kotru21/kotikov">Исходный код</a>
-          ❤️
-          <a class="text-white" href="https://www.cloudflare.com/">Спасибо, Cloudflare!</a>
-        </div>
-        <!-- Copyright -->
-      </footer>
+          <!-- Copyright -->
+          <div class="text-center p-3" style="background-color: rgba(22, 22, 22, 0.8); border-radius: 2rem 2rem 0 0">
+            © 2022 Copyright:
+            <a class="text-white" href="#">Arsenij Kotikov</a>
+            |
+            <a class="text-white" href="https://github.com/kotru21/kotikov">Исходный код</a>
+            ❤️
+            <a class="text-white" href="https://www.cloudflare.com/">Спасибо, Cloudflare!</a>
+          </div>
+          <!-- Copyright -->
+        </footer>
 
-      <style>
-        p {
-          opacity: 0.8;
-        }
-        a.bigger {
-          font-size: 2rem;
-        }
-        i {
-          border-radius: 0.4rem;
-        }
-        hr {
-          background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, white 35%, rgba(255, 255, 255, 0.1) 100%);
-          height: 1rem;
-        }
-        .dsc {
-          margin: 1rem;
-          padding-bottom: 0.2rem;
-          margin-top: 4rem;
-          transition: 1s;
-        }
-        .innerh1 {
-          padding-bottom: 2rem;
-        }
-        body {
-          margin: 0;
-          background-color: rgb(0, 0, 0);
-          color: white;
-          font-family: sans-serif;
-          background-image: url("./src/pc_index/code.png");
-          background-size: 15%;
-          overflow-x: hidden;
-        }
-        .container {
-          padding-left: 5%;
-          padding-right: 5%;
-          left: -30%;
-          right: -30%;
-          box-shadow: 10px 10px 10px black;
-          margin: 0 auto;
-          height: fit-content;
-          background-color: rgb(12, 12, 12);
-          z-index: 55;
-        }
-        .dsc:hover {
-          transform: scale(1.05);
-          filter: drop-shadow(20px 20px 20px rgb(0, 0, 0));
-        }
-        .btn:hover {
-          color: #11101d;
-          background: #fff;
-          box-shadow: rgba(255, 255, 255, 0.4) 0px 3px 10px, rgba(255, 255, 255, 0.3) -5px 5px;
-        }
-
-        .percdivR {
-          width: 50%;
-          float: right;
-        }
-        .dsc-img {
-          width: 10rem;
-          float: left;
-          margin-right: 1rem;
-          border-radius: 0.2rem !important;
-        }
-        .percdivL {
-          width: 50%;
-          float: left;
-        }
-        .paddingcont {
-          height: 6rem;
-          background-color: rgba(26, 26, 26, 0.9);
-          z-index: 1;
-        }
-        .leftcont {
-          float: left;
-          margin-left: 10%;
-          margin-top: 15%;
-        }
-        .h1 {
-          font-size: 6rem;
-        }
-        .h2 {
-          font-size: 3rem;
-        }
-        .Contenth1 {
-          font-size: 4rem;
-          text-shadow: 5px 5px 10px black;
-        }
-        .img {
-          position: absolute;
-          right: 0px;
-          bottom: -6rem;
-          height: 110vh;
-          min-height: 110vh;
-          max-width: 110vh;
-          transition: 2s;
-        }
-        .img.scrolled {
-          transform: translateX(5vw);
-          opacity: 0;
-        }
-        .hello_container {
-          height: 100%;
-          width: 100%;
-        }
-        a.bettertouch {
-          position: relative;
-          z-index: 50;
-        }
-
-        a.bettertouch:before {
-          position: absolute;
-          content: "";
-          top: -10px;
-          right: -10px;
-          left: -10px;
-          bottom: -10px;
-          z-index: 40;
-        }
-        .left {
-          float: left;
-          width: 100%;
-        }
-        .right {
-          float: right;
-        }
-        .card-body {
-          border-radius: 0 0 1rem 1rem;
-          background-color: rgb(0, 0, 0) !important;
-        }
-        .card-img-bottom {
-          border-radius: 1rem 1rem 0 0;
-        }
-        .navbar {
-          backdrop-filter: blur(10px);
-          position: fixed;
-          opacity: 0;
-          background: linear-gradient(to left, rgba(51, 51, 51, 0), rgba(73, 73, 73, 0.7), rgba(51, 51, 51, 0));
-          transition: 2s;
-          padding-top: 1rem;
-          width: 100%;
-          z-index: 999;
-          -webkit-box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.1);
-          -moz-box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.1);
-          box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.1);
-        }
-        .contact {
-          transition: 3s;
-          margin-top: 2rem;
-        }
-        .contact.scrolled {
-          opacity: 0;
-          display: none;
-          transition: 2s;
-        }
-        .navbar.scrolled {
-          background-color: rgba(73, 73, 73, 0.7);
-          opacity: 1;
-          transition: 2s;
-        }
-        .bx {
-          color: white;
-          font-size: 1.5rem;
-          margin-right: 2rem;
-          background-color: #ffffff2f;
-        }
-        .dynamic {
-          background: linear-gradient(242deg, #ce0000, #ff8522, #c322ff);
-          background-size: 600% 600%;
-
-          -webkit-animation: anim 11s ease infinite;
-          -moz-animation: anim 11s ease infinite;
-          animation: anim 11s ease infinite;
-        }
-        .bd {
-          background: linear-gradient(242deg, #ce0000, #ff8522, #c322ff);
-          background-size: 600% 600%;
-
-          -webkit-animation: anim 11s ease infinite;
-          -moz-animation: anim 11s ease infinite;
-          animation: anim 11s ease infinite;
-        }
-        .endpage {
-          background: linear-gradient(242deg, #3700ce, #29ff22, #c322ff);
-          background-size: 600% 600%;
-
-          -webkit-animation: anim 11s ease infinite;
-          -moz-animation: anim 11s ease infinite;
-          animation: anim 11s ease infinite;
-        }
-
-        @-webkit-keyframes anim {
-          0% {
-            background-position: 0% 50%;
+        <style>
+          p {
+            opacity: 0.8;
           }
-          50% {
-            background-position: 100% 50%;
+          a.bigger {
+            font-size: 2rem;
           }
-          100% {
-            background-position: 0% 50%;
+          i {
+            border-radius: 0.4rem;
           }
-        }
-        @-moz-keyframes anim {
-          0% {
-            background-position: 0% 50%;
+          hr {
+            background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, white 35%, rgba(255, 255, 255, 0.1) 100%);
+            height: 1rem;
           }
-          50% {
-            background-position: 100% 50%;
+          .dsc {
+            margin: 1rem;
+            padding-bottom: 0.2rem;
+            margin-top: 4rem;
+            transition: 1s;
           }
-          100% {
-            background-position: 0% 50%;
+          .innerh1 {
+            padding-bottom: 2rem;
           }
-        }
-        @keyframes anim {
-          0% {
-            background-position: 0% 50%;
+          body {
+            margin: 0;
+            background-color: rgb(0, 0, 0);
+            color: white;
+            font-family: sans-serif;
+            background-image: url("./src/pc_index/code.png");
+            background-size: 15%;
+            overflow-x: hidden;
           }
-          50% {
-            background-position: 100% 50%;
+          .container {
+            padding-left: 5%;
+            padding-right: 5%;
+            left: -30%;
+            right: -30%;
+            box-shadow: 10px 10px 10px black;
+            margin: 0 auto;
+            height: fit-content;
+            background-color: rgb(12, 12, 12);
+            z-index: 55;
           }
-          100% {
-            background-position: 0% 50%;
+          .dsc:hover {
+            transform: scale(1.05);
+            filter: drop-shadow(20px 20px 20px rgb(0, 0, 0));
           }
-        }
-        /* width */
-        ::-webkit-scrollbar {
-          width: 10px;
-          background-color: #ffffff42;
-        }
+          .btn:hover {
+            color: #11101d;
+            background: #fff;
+            box-shadow: rgba(255, 255, 255, 0.4) 0px 3px 10px, rgba(255, 255, 255, 0.3) -5px 5px;
+          }
+          .Mail {
+            max-width: 15rem;
+            transition: 1s;
+          }
+          .Mail:hover {
+            -webkit-filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.5));
+            filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.5));
+            transition: 1s;
+          }
+          .percdivR {
+            width: 50%;
+            float: right;
+          }
+          .dsc-img {
+            width: 10rem;
+            float: left;
+            margin-right: 1rem;
+            border-radius: 0.2rem !important;
+          }
+          .percdivL {
+            width: 50%;
+            float: left;
+          }
+          .paddingcont {
+            height: 6rem;
+            background-color: rgba(26, 26, 26, 0.9);
+            z-index: 1;
+          }
+          .leftcont {
+            float: left;
+            margin-left: 10%;
+            margin-top: 15%;
+          }
+          .h1 {
+            font-size: 6rem;
+          }
+          .h2 {
+            font-size: 3rem;
+          }
+          .Contenth1 {
+            font-size: 4rem;
+            text-shadow: 5px 5px 10px black;
+          }
+          .img {
+            position: absolute;
+            right: 0px;
+            bottom: -6rem;
+            height: 110vh;
+            min-height: 110vh;
+            max-width: 110vh;
+            transition: 2s;
+          }
+          .img.scrolled {
+            transform: translateX(5vw);
+            opacity: 0;
+          }
+          .hello_container {
+            height: 100%;
+            width: 100%;
+          }
+          a.bettertouch {
+            position: relative;
+            z-index: 50;
+          }
 
-        /* Track */
-        ::-webkit-scrollbar-track {
-          border-radius: 10px;
-        }
+          a.bettertouch:before {
+            position: absolute;
+            content: "";
+            top: -10px;
+            right: -10px;
+            left: -10px;
+            bottom: -10px;
+            z-index: 40;
+          }
+          .left {
+            float: left;
+            width: 100%;
+          }
+          .right {
+            float: right;
+          }
+          .card-body {
+            border-radius: 0 0 1rem 1rem;
+            background-color: rgb(0, 0, 0) !important;
+          }
+          .card-img-bottom {
+            border-radius: 1rem 1rem 0 0;
+          }
+          .navbar {
+            backdrop-filter: blur(10px);
+            position: fixed;
+            opacity: 0;
+            background: linear-gradient(to left, rgba(51, 51, 51, 0), rgba(73, 73, 73, 0.7), rgba(51, 51, 51, 0));
+            transition: 2s;
+            padding-top: 1rem;
+            width: 100%;
+            z-index: 999;
+            -webkit-box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.1);
+            -moz-box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.1);
+            box-shadow: 4px 4px 6px -1px rgba(17, 16, 29, 0.1);
+          }
+          .dsc-end {
+            background-size: contain;
+            background-position: center;
+            background-color: #000000;
+            min-width: 20rem;
+            padding-top: 2rem;
+            width: 38vw;
+            max-width: 600px;
+            height: 100%;
+          }
+          .contact {
+            transition: 3s;
+            margin-top: 2rem;
+          }
+          .contact.scrolled {
+            opacity: 0;
+            display: none;
+            transition: 2s;
+          }
+          .navbar.scrolled {
+            background-color: rgba(73, 73, 73, 0.7);
+            opacity: 1;
+            transition: 2s;
+          }
+          .bx {
+            color: white;
+            font-size: 1.5rem;
+            margin-right: 2rem;
+            background-color: #ffffff2f;
+          }
+          .dynamic {
+            font-size: 3rem;
+            background: linear-gradient(242deg, #ce0000, #ff8522, #c322ff);
+            background-size: 600% 600%;
 
-        /* Handle */
-        ::-webkit-scrollbar-thumb {
-          background: red;
-          border-radius: 5px;
-        }
-      </style>
-      <script>
-        $(function () {
-          $(document).scroll(function () {
-            var $nav = $(".navbar");
-            $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
-            var $tdo = $(".contact");
-            $tdo.toggleClass("scrolled", $(this).scrollTop() > $tdo.height());
+            -webkit-animation: anim 11s ease infinite;
+            -moz-animation: anim 11s ease infinite;
+            animation: anim 11s ease infinite;
+          }
+          .bd {
+            background: linear-gradient(242deg, #ce0000, #ff8522, #c322ff);
+            background-size: 600% 600%;
+
+            -webkit-animation: anim 11s ease infinite;
+            -moz-animation: anim 11s ease infinite;
+            animation: anim 11s ease infinite;
+          }
+          .endpage {
+            font-size: 3rem;
+            background: linear-gradient(242deg, #3700ce, #29ff22, #c322ff);
+            background-size: 600% 600%;
+
+            -webkit-animation: anim 11s ease infinite;
+            -moz-animation: anim 11s ease infinite;
+            animation: anim 11s ease infinite;
+          }
+
+          @-webkit-keyframes anim {
+            0% {
+              background-position: 0% 50%;
+            }
+            50% {
+              background-position: 100% 50%;
+            }
+            100% {
+              background-position: 0% 50%;
+            }
+          }
+          @-moz-keyframes anim {
+            0% {
+              background-position: 0% 50%;
+            }
+            50% {
+              background-position: 100% 50%;
+            }
+            100% {
+              background-position: 0% 50%;
+            }
+          }
+          @keyframes anim {
+            0% {
+              background-position: 0% 50%;
+            }
+            50% {
+              background-position: 100% 50%;
+            }
+            100% {
+              background-position: 0% 50%;
+            }
+          }
+          /* width */
+          ::-webkit-scrollbar {
+            width: 10px;
+            background-color: #ffffff42;
+          }
+
+          /* Track */
+          ::-webkit-scrollbar-track {
+            border-radius: 10px;
+          }
+
+          /* Handle */
+          ::-webkit-scrollbar-thumb {
+            background: red;
+            border-radius: 5px;
+          }
+        </style>
+        <script>
+          $(function () {
+            $(document).scroll(function () {
+              var $nav = $(".navbar");
+              $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+              var $tdo = $(".contact");
+              $tdo.toggleClass("scrolled", $(this).scrollTop() > $tdo.height());
+            });
           });
-        });
-        //   $(window).scroll(function () {
-        //     var scrollTop = $(this).scrollTop();
+          //   $(window).scroll(function () {
+          //     var scrollTop = $(this).scrollTop();
 
-        //     $(".hello_container").css({
-        //       opacity: function () {
-        //         var elementHeight = $(this).height(),
-        //           opacity = ((elementHeight - scrollTop) / elementHeight) * 2 + 0.2;
+          //     $(".hello_container").css({
+          //       opacity: function () {
+          //         var elementHeight = $(this).height(),
+          //           opacity = ((elementHeight - scrollTop) / elementHeight) * 2 + 0.2;
 
-        //         return opacity;
-        //       },
-        //     });
-        //     $(".paddingcont").css({
-        //       opacity: function () {
-        //         var elementHeight = $(this).height(),
-        //           opacity = ((elementHeight * 6 - scrollTop) / elementHeight) * 2 + 0.2;
+          //         return opacity;
+          //       },
+          //     });
+          //     $(".paddingcont").css({
+          //       opacity: function () {
+          //         var elementHeight = $(this).height(),
+          //           opacity = ((elementHeight * 6 - scrollTop) / elementHeight) * 2 + 0.2;
 
-        //         return opacity;
-        //       },
-        //     });
-        //   });
-      </script>
+          //         return opacity;
+          //       },
+          //     });
+          //   });
+        </script>
+      </div>
     </div>
   </body>
 </html>
