--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="ru">
   <head>
     <script>
-      function check(){
+      function check() {
         var info = window.screen.width;
         console.log(info);
         if (info >= 921) {
-          window.location.href="pc_index.html";
+          window.location.href = "pc_index.html";
         }
-      };
-      check()
+      }
+      check();
     </script>
     <meta name="viewport" content="width=device-width" initial-scale="1.0" minimum-scale="1.0" maximum-scale="1.0" user-scalable="no" />
     <meta property="og:locale" content="ru_RU" />
