--- a/pc_index.html
+++ b/pc_index.html
@@ -102,16 +102,19 @@
         <h1 class="Contenth1">Блокчейн</h1>
         <p>Блокчейн — новейшая технология, интерес к которой вырос вместе с популярностью криптовалют. Сегодня ее широко обсуждают не только в мире финансов. Блокчейн уже пробуют использовать для хранения и обработки персональных данных и идентификации, в маркетинге и компьютерных играх.</p>
       </div>
+      <hr style="border: 1px dashed rgb(255, 255, 255); margin-top: 2rem; margin-bottom: 1rem" />
       <div class="dsc">
         <img loading="lazy" src="./src/pc_index/deeplearning.png" class="dsc-img rounded" alt="..." />
         <h1 class="Contenth1">Нейронные сети</h1>
         <p>Нейро́нная сеть — математическая модель, а также её программное или аппаратное воплощение, построенная по принципу организации и функционирования биологических нейронных сетей — сетей нервных клеток живого организма.</p>
       </div>
+      <hr style="border: 1px dashed rgb(255, 255, 255); margin-top: 2rem; margin-bottom: 1rem" />
       <div class="dsc">
         <img loading="lazy" src="./src/pc_index/gamepad.png" class="dsc-img rounded" alt="..." />
         <h1 class="Contenth1">Игры</h1>
         <p>Кому-то не нравятся компьютерные игры? Серьёзно?</p>
       </div>
+      <hr style="border: 1px dashed rgb(255, 255, 255); margin-top: 2rem; margin-bottom: 1rem" />
       <div class="dsc">
         <img loading="lazy" src="./src/pc_index/pc_cat.png" class="dsc-img rounded" alt="..." />
         <h1 class="Contenth1">Котики</h1>
@@ -291,6 +294,7 @@
             padding-bottom: 0.2rem;
             margin-top: 4rem;
             transition: 1s;
+            height: 10rem;
           }
           .innerh1 {
             padding-bottom: 2rem;
