--- a/pc_index.html
+++ b/pc_index.html
@@ -3,7 +3,7 @@
     <script>
       function check() {
         var info = window.screen.width;
-        if (info <= 920) {
+        if (info < 1279) {
           window.location.href = "index.html";
         }
       }
