--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         var info = window.screen.width;
         console.log(info);
         if (info >= 1279) {
-          window.location.href = "pc_index.html";
+          window.location.href = "pc.html";
         }
       }
       check();
