--- a/pc.html
+++ b/pc.html
@@ -294,7 +294,8 @@
             padding-bottom: 0.2rem;
             margin-top: 4rem;
             transition: 1s;
-            height: 10rem;
+            height: fit-content;
+            min-height: 10rem;
           }
           .innerh1 {
             padding-bottom: 2rem;
@@ -322,6 +323,10 @@
           .dsc:hover {
             transform: scale(1.05);
             filter: drop-shadow(20px 20px 20px rgb(0, 0, 0));
+          }
+          .dsc:hover > .bx {
+            filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.4));
+            transition: 1s;
           }
           .btn:hover {
             color: #11101d;
