--- a/pc.html
+++ b/pc.html
@@ -156,7 +156,7 @@
       <div class="dsc">
         <img loading="lazy" src="./src/pc_index/gamepad.png" class="dsc-img rounded" alt="..." />
         <h1 class="Contenth1">Игры</h1>
-        <p>Кому-то не нравятся компьютерные игры? Серьёзно?</p>
+        <p>Кому-то не нравятся компьютерные игры? Серьёзно? Компьютерная игра — компьютерная программа, служащая для организации игрового процесса (геймплея), связи с партнёрами по игре, или сама выступающая в качестве партнёра.</p>
       </div>
       <hr style="border: 1px dashed rgb(255, 255, 255); margin-top: 2rem; margin-bottom: 1rem" />
       <div class="dsc">
