--- a/pc.html
+++ b/pc.html
@@ -416,6 +416,7 @@
             float: left;
             margin-right: 1rem;
             border-radius: 0.2rem !important;
+            padding-top: 0.5rem;
           }
 
           .percdivL {
