--- a/404.html
+++ b/404.html
@@ -14,7 +14,10 @@
     <meta property="vk:description" content="Описание? Ну и что мне сюда написать?..." />
     <meta property="vk:image" content="https://kotikov.pages.dev/src/index/web_preview_VK.png" />
     <link rel="image_src" href="https://kotikov.pages.dev/src/index/web_preview.png" />
-    <link rel="icon" type="image/x-icon" href="./src/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <meta property="og:description" content="Описание? Ну и что мне сюда написать?..." />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
