--- a/404.html
+++ b/404.html
@@ -14,8 +14,7 @@
     <meta property="vk:description" content="Описание? Ну и что мне сюда написать?..." />
     <meta property="vk:image" content="https://kotikov.pages.dev/src/index/web_preview_VK.png" />
     <link rel="image_src" href="https://kotikov.pages.dev/src/index/web_preview.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="512x512" href="/favicon.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="https://kotikov.pages.dev/favicon.ico" />
     <link rel="manifest" href="/site.webmanifest" />
     <meta property="og:description" content="Описание? Ну и что мне сюда написать?..." />
     <meta charset="utf-8" />
